2006-02-14  Atsushi Enomoto  <atsushi@ximian.com>

	* UTF8Encoding.cs : Fallback was indicating incorrect index.
	  Fixed bug #77550.

2006-02-10  Atsushi Enomoto  <atsushi@ximian.com>

	* ASCIIEncoding.cs : (GetChars) reduced either one store or one jump
	  in IL. 10% performance improvement.

2006-02-03  Atsushi Enomoto  <atsushi@ximian.com>

	* UTF8Encoding.cs : avoid possible overflow.

2006-02-03  Atsushi Enomoto  <atsushi@ximian.com>

	* UTF8Encoding.cs : In zero-charbuffer case, byte buffer count should
	  be checked. Also it should not ignore leftOver characters even if
	  byte buffer length is 0.

2006-02-03  Atsushi Enomoto  <atsushi@ximian.com>

	* UTF8Encoding.cs : Fast path optimization for InternalGetByteCount()
	  and InternalGetBytes().

2006-02-03  Atsushi Enomoto  <atsushi@ximian.com>

	* UTF8Encoding.cs :
	  actually leftover bits needs more careful handleding. So it's
	  better to be rather close to the original GetBytes().
	  Also changed leftOver handling so that it will be able to support
	  fallback.

2006-02-03  Atsushi Enomoto  <atsushi@ximian.com>

	* UTF8Encoding.cs :
	  GetBytes(string, ...) could reuse InternalGetBytes() using fixed
	  pointers. However, InternalGetBytes() was slower than
	  GetBytes(string, ...), so first replaced existing InternalGetBytes()
	  with GetBytes() internals, and GetBytes(string, ...) switched to 
	  InternalGetBytes(). Now GetBytes() implementation code is reduced
	  to one method.

2006-02-02  Atsushi Enomoto  <atsushi@ximian.com>

	* UTF8Encoding.cs : fast path optimization was pretty insufficient.
	  Now it handles the entire bytes, not just half of them.

2006-02-02  Atsushi Enomoto  <atsushi@ximian.com>

	* UTF8Encoding.cs : zero-length check was wrong. Check it by
	  "charIndex == chars.Length" instead of "charCount == 0".

2006-02-02  Atsushi Enomoto  <atsushi@ximian.com>

	* UTF8Encoding.cs : switched GetBytes() to pointer-based code.